fixed input field rendering on media pop-up on Firefox
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@15118 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -5169,7 +5169,7 @@ box-shadow: inset 0 2px 0 0 #fff;
 #upfront-popup input[type=text] {
 	background: #F2F9FF;
 	border: 1px solid #A4BFD8;
-	padding: 8px 5px;
+	padding: 0px 5px;
 	font-size: 15px;
 	color: #3A5268;
 }
